// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeInputFormControlOptions should normalize complex input form control options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controllerName": "user-form",
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [],
    "hasClearButton": true,
    "label": "Email Address",
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "user-form",
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/input",
      "name": "MatInputModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "inputType": "email",
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "input",
  "label": "Email Address",
  "memberList": [],
  "name": "email",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "placeholder": "Enter your email",
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "input-form-control.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "string",
    "namedImport": null,
    "namespaceImport": null,
  },
  "validatorList": [
    "required",
    "email",
    "IsEmail()",
  ],
}
`;

exports[`NormalizeInputFormControlOptions should normalize minimal input form control options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controllerName": "test-form",
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [],
    "hasClearButton": true,
    "label": null,
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "test-form",
  "handlebars": [Function],
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/input",
      "name": "MatInputModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "inputType": "text",
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "input",
  "label": null,
  "memberList": [],
  "name": "testInput",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "placeholder": null,
  "prefix": null,
  "project": "ui-lib",
  "replace": false,
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "input-form-control.hbs",
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "string",
    "namedImport": null,
    "namespaceImport": null,
  },
  "validatorList": [],
}
`;
